--- a/src/assets/scss/components/_portfolio.scss
+++ b/src/assets/scss/components/_portfolio.scss
@@ -3,7 +3,7 @@
   color: $white;
 }
 .portfolio-header {
-  width: 100vw;
+  width: 100%;
   text-align: center;
   padding-top: 2rem;
   p {
